# crash-gui

./: .gitignore  CMakeLists.txt  README.md  cmake_build.sh  compile_commands.json  makefile  memleakex.c  test  test.c
src/: crashgui.c  crashgui.h
src/window_gtk/: window.c  window.h
